<resources>

    <string name="app_name">بنك الدم</string>
    <string name="location">اختيار الموقع</string>
    <string name="GPSAlertDialogTitle">تنبيه</string>
    <string name="GPSAlertDialogMessage">برجاء تشغيل محدد المواقع</string>
    <string name="cancel">إلغاء</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="select_blood_type">Select blood type</string>
    <string name="wait">Please wait....</string>
    <string name="select_date">Select date</string>
    <string name="invalid_user_name">Username mast be more than 3 cher</string>
    <string name="invalid_password">Password mast be more than 6 of cher and number</string>
    <string name="invalid_brd">Please select your birthday</string>
    <string name="invalid_last_date">Please select your last donation date</string>
    <string name="select_city">Select city</string>
    <string name="select_government">Select government</string>
    <string name="city">City</string>
    <string name="hospital">Hospital</string>
    <string name="patient_name">Patient name</string>
    <string name="error">Something went wrong</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="last_donation">Last donation</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="don_t_have_account_you_can_register_from_her">Don\'t have account? You can register from her</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="slider1">الصحة هي مستوى الكفاءة الوظيفية والأيضية للكائن الحي، أما عند الإنسان فالصحة لدى الأفراد والمجتمعات وفقا لتعريف منظمة الصحة العالمية في إعلان لمبادئ الرعاية الصحية الأولية عام 1978. هي حالة من اكتمال السلامة البدنية والعقلية والإجتماعية وليس مجرد غياب أو إنعدام للمرض أو العجز.</string>
    <string name="title_activity_maps">Map</string>
    <string name="call">Call</string>
    <string name="donation">Donation</string>
    <string name="blood_type">Blood type</string>
    <string name="age">Age</string>
    <string name="bags_number">Bags number</string>
    <string name="address">Address</string>
    <string name="send">Send</string>
    <string name="note">Notes</string>
    <string name="empty">Field required</string>
    <string name="invalid_age">Please, write your age</string>
    <string name="invalid_bags_number">Please, enter bags number</string>
    <string name="invalid_hospital_name">Please, enter hospital name</string>
    <string name="invalid_hospital_address">Please, enter hospital address</string>
    <string name="hospital_addresse">Hospital address</string>
    <string name="hospital_name">Hospital name</string>
    <string name="max_notification">+9</string>
    <string name="donations">Donations</string>
    <string name="articles">Articles</string>
    <string name="notification">Notification</string>
    <string name="edit_data">Edit data</string>
    <string name="load_more">Load more</string>
    <string name="no_donations">No donations to retrieve, \n Please start saving the human by donating blood now</string>
    <string name="no_notification">No notification now , \n Please start saving the human by donating blood now</string>
    <string name="add_new_donation">Add new donation</string>
    <string name="error_list">Same thing happened, Please try again later</string>
    <string name="error_inter_net">No internet connection, Please check your internet connection try again later</string>
    <string name="reload">reload</string>

    <string name="enter_phone_number">enter phone number</string>
    <string name="change_password_code">change_password_code</string>
    <string name="pin_code">pin code</string>
    <string name="new_password">new password</string>
    <string name="new_password_confirmation">password confirmation</string>
    <string name="enter_pin_code">enter pin code</string>
    <string name="enter_password">enter password</string>
    <string name="enter_password_confirm">enter password confirmation</string>
    <string name="message_title">message title</string>
    <string name="message_content">message content</string>
    <string name="blood_types">blood types</string>
    <string name="governorates">governorates</string>
    <string name="favourites">favourites</string>
    <string name="contact_us">contact us</string>
    <string name="about_app">about app</string>
    <string name="rate_app">rate on play store</string>
    <string name="notifications_settings">notifications settings</string>
    <string name="sign_out">sign out</string>
    <string name="search_keyword">enter search keyword</string>
    <string name="select_category">select category</string>
    <string name="add_to_favourite">added to favourites</string>
    <string name="remove_from_favourite">removed from favourites</string>
    <string name="enter_message_title">enter your message title</string>
    <string name="enter_message_content">enter your message content</string>
    <string name="more">more</string>
    <string name="logout">want to log out ??</string>
    <string name="create_donation">Create donation</string>
    <string name="select_location">Select location</string>

</resources>
